# BMPLC_Quick_Project

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  STM32F765ZGTX_FLASH.ld  STM32G0B1.svd  STM32G0B1KCUX_FLASH.ld  main.c
.github/scripts/: flashing.py  units.py
.github/workflows/: unit_tests.yml
core/: README.md
core/inc/: FreeRTOSConfig.h  mongoose_config.h
core/inc/f1/: hal.h  mongoose_config.h  tusb_config.h
core/inc/f7/: mongoose_config.h
core/inc/g0/: stm32g0xx_hal_conf.h  tusb_config.h
core/src/: usb_descriptors.c
core/src/g0/: stm32g0xx_hal_msp.c
device_templates/: plc_l.cmake  plc_m.cmake  plc_xl.cmake
flash/: RPLC_M.jlink
rlibs/: CMakeLists.txt
toolchains/: g0b1.cmake  plc_l.cmake  plc_m.cmake  plc_xl.cmake
user_apps/: CMakeLists.txt
user_apps/cdc_net_hello_rhs/: CMakeLists.txt  cdc_net_hello_rhs.c
user_apps/eth_net_hello_rhs/: CMakeLists.txt  eth_net_hello_rhs.c
user_tests/: CMakeLists.txt
user_tests/eeprom_test/: CMakeLists.txt  eeprom_test.c
